--- a/bindu.bib
+++ b/bindu.bib
@@ -1,3 +1,98 @@
+@book{shastri1950,
+  title={The Śivapurāṇa - Part I},
+  author={Shastri, J.L.},
+  year={1950},
+  publisher={Motilal Banarsidas},
+  address={Delhi},
+  keywords={seclit},
+}
+
+@book{ayurveda,
+  title={Āyurvedīya Mahākośa (Āyurvedīya Śabdakośa) Sanskrit-Sanskrit [Dictionary]},
+  author={Jośī, Nārāyaṇa Harī},
+  volume={1}, 
+  year={1968},
+  publisher={Maharashtra Rajya Sahitya Ani Samskriti Mandala},
+  address={Mumbai},
+  keywords={seclit},
+}
+
+
+
+@book{hauschild1927,
+  title={Śvetāśvatara Upaniṣad},
+  subtitle={Die Śvetāśvatara-Upaniṣad: Eine kritische Ausgabe mit einer Übersetzung und einer Übersicht über ihre Lehren},
+  author={Hauschild, Richard},
+  year={1927},
+  publisher={Deutsche Morgenländische Gesellschaft in Kommission bei F.A. Brockhaus},
+  address={Leipzig},
+  keywords={printsource},
+}
+
+@book{saradaavalon,
+  title={Śāradātilaka},
+  subtitle={Shāradātilakatantram: Part I.},
+  author={Avalon, Arthur},
+  year={1933},
+  publisher={Emerald Printing Works},
+  address={Calcutta},
+  keywords={printsource},
+}
+
+
+@book{kathaup,
+  title={Katha Upaniṣad},
+  subtitle={Kathopanishad: With the Sanskrit Text, Anvaya, Vritti, Word Meaning, Translation, Notes and Index},
+  author={Sris Chandra Vasu},
+  series={Vedanta Series},
+  volume={No. 3.}, 
+  year={1905},
+  publisher={Alhallabad Press},
+  address={Alhallabad},
+  keywords={printsource},
+}
+
+@book{shivapura,
+  title={Siva-Purana, Book 1: Vidyesvara-Samhita},
+  year={1920},
+  publisher={Venkatesvara Steam Press},
+  address={Bombay},
+  keywords={seclit},
+}
+
+
+@book{siddharoma,
+  title={Siddhāntaśiromaṇi},
+  subtitle={Siddhāntaśiromaṇer Grahagaṇitasya Madhyamādhikārāntaḥ Vāsanābhāṣyavāsanā-
+vārttikamarīcibhiḥ sahitaḥ},
+  author={Bhāskara}, 
+  editor={Jha, Jyautishacharya Pandit Muralidhara},
+  year={1917},
+  publisher={Medical Hall Press},
+  address={Benares},
+  keywords={printsource},
+}
+
+@book{kubji1988,
+  title={Kubjikāmatatantra},
+  editor={Gourdriaan, Teun and Schoterman, J.A.},
+  series={Gonda Indological Studies, Band 16},
+  year={1988},
+  address={Leiden; New York},
+  publisher={Brill},
+  keywords={printsource},
+}
+
+@book{kowski1988,
+  title={The Canon of the Śaivāgama and the Kūbjika Tantras of the Western Kaula Tradition},
+  editor={Dyczkowski, M.S.G.},
+  year={1988},
+  series={The Suny Series in the Shaiva Traditions of Kashmir}, 
+  publisher={The State University of New York Press},
+  address={Albany},
+  keywords={seclit},
+}
+
 @book{acri2011dharma,
   title={Dharma Pātañjala: A Śaiva Scripture from Ancient Java Studied in the Light of Related Old Javanese and Sanskrit Texts},
   editor={Acri, Andrea},
@@ -244,6 +339,14 @@ Sound},
   keywords={seclit},
 }
   
+@book{sircar1966,
+  title={Indian Epigraphical Glossary},
+  author={Sircar, D.C.},
+  year={1966},
+  publisher={Motilal Banarsidas},
+  address={Delhi},
+  keywords={seclit},
+}
 
 @book{yogapowers2017,
   title={Yoga Powers: Extraordinary Capacities Attained Through Meditation and Concentration},
@@ -786,6 +889,15 @@ Sound},
   keywords={seclit},
 }
 
+@book{petersburger4,
+  title={Sanskrit Wörterbuch},
+  author={Boethling, O. und Roth, R.},
+  year={1858},  
+  volume={4},
+  address={Petersburg},
+  keywords={seclit},
+}
+
 @book{yogatarangini,
   title={Yoga-Taraṅgiṇī: A Rare commentary on Gorakṣa-śataka},
   editor={Brezinski, Jan K.},
@@ -1225,3 +1337,19 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
   keywords={onlinesource},
 }
 
+@online{kriyakrama,
+  title = {Kriyakramadyotikavyākhyā},
+  author ={kacchapeśvaraśivācārya},
+  organization = {Muktabodha Indological Research Institute (MIRI)}, 
+  howpublished = {\url{https://muktalib7.com/}},
+  note = {\url{https://muktalib7.com/}; Accessed: 02/17/2023; Catalog number : M00324; IFP transcript T00109}, 
+  keywords={onlinesource},
+}
+
+@online{sakalagama,
+  title = {Sakalāgamasārasaṅgraha},
+  organization = {Muktabodha Indological Research Institute (MIRI)}, 
+  howpublished = {\url{https://muktalib7.com/}},
+  note = {\url{https://muktalib7.com/}; Accessed: 02/17/2023; Catalog number : M00063; IFP transcript T0351}, 
+  keywords={onlinesource},
+}
