more alignment of edition and translation plus annotation until first section of laksyayoga

--- a/bindu.bib
+++ b/bindu.bib
@@ -17,8 +17,6 @@
   keywords={seclit},
 }
 
-
-
 @book{hauschild1927,
   title={Śvetāśvatara Upaniṣad},
   subtitle={Die Śvetāśvatara-Upaniṣad: Eine kritische Ausgabe mit einer Übersetzung und einer Übersicht über ihre Lehren},
@@ -26,6 +24,27 @@
   year={1927},
   publisher={Deutsche Morgenländische Gesellschaft in Kommission bei F.A. Brockhaus},
   address={Leipzig},
+  keywords={printsource},
+}
+
+@book{sarvangayoga,
+  title={Sarvāṅgayogapradīpikā},
+  subtitle={Sarvāṅgayogapradīpikā in the Sundargranthāvalī},
+  editor= {Misra, R.C.},
+  year={1992},
+  publisher={Kitabghar},
+  address={Delhi},
+  keywords={printsource},
+}
+
+@book{bäumer2013,
+  title={Vijñānabhairava},
+  subtitle={Vijñāna Bhairava - Das göttliche Bewußtsein},
+  author={Bäumer, Bettina},
+  series={Taschenbuch 6}, 
+  year={2013},
+  publisher={Verlag der Weltreligionen im Insel Verlag},
+  address={Frankfurt am Main and Leipzig},
   keywords={printsource},
 }
 
@@ -803,6 +822,7 @@ Sound},
    keyword={printsource},
 }
 
+@book{sspmallik,
    title={Siddha-Siddhaanta-Paddhati and Other Works of the Nātha Yogīs},
    author={Mallik, S.K.},
     year={1954},
@@ -813,8 +833,9 @@ Sound},
 }
 
 @book{ssplonavla,
-    title={Siddhasiddhāntapaddhatiḥ: A treatise on the Nātha philosophy by Gorakṣanātha},
-    editor={Dr. M. L. Gharote and Dr. G. K. Pai},
+    title={Siddhasiddhāntapaddhati},
+    subtitle= {Siddhasiddhāntapaddhatiḥ: A treatise on the Nātha philosophy by Gorakṣanātha},
+    editor={Gharote, Dr. M. L. and Pai, Dr. G. K. },
     year={2016},
     publisher={The Lonavla Yoga Institute (India)},
     address={Lonavla},
@@ -846,6 +867,17 @@ Sound},
     %url={http://muktalib5.org/DL_CATALOG/TEXTS/ETEXTS/purascaryaarnava-I-DEV.pdf},
     keywords={printsource},
 }
+
+@book{yogakarnika,
+  title={Yogakarṇikā},
+  subtitle={Yogakarṇikā (An Ancient Treatise on Yoga)},
+  editor={Nath Sharma, Narendra},
+  year={2004},
+  publisher={Eastern Book Linkers},
+  address={Delhi}, 
+  keywords={printsource},
+  }
+
 
 @Misc{puras,
    note={Puraścaryārṇavaḥ: \cite{purascaryarnava1901}},
@@ -1152,6 +1184,16 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
    keywords={printsource},
 }
 
+@book{yogaupaniṣads,
+   title={The Yoga-Upaniṣads},
+   subtitle={Translated into English (on the Basis of the Commentary of Śrī Upaniṣad-Brahma-Yogin)},
+   year={1938},
+   editor={Ayyaṅgar, Śrīnivāsa and Subrahmaṇya Śāstri, S.},  
+   publisher={The Adyar Library},
+   address={Adyar},
+   keywords={printsource},
+}
+
 @article{mallinsonnath,
    title={Nāth Sampradāya},
    author={Mallinson, James},
@@ -1305,6 +1347,18 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
   keywords={onlinesource},
 }
 
+@online{saubhagya,
+  title = {Saubhāgyalakṣmyzupaniṣat},
+  editor = {Ḥattangadi, Ṣunder}, 
+  year ={2016}, 
+  organization = {sanskritdocuments.org}, 
+  howpublished = {\url{https://sanskritdocuments.org/doc_upanishhat/saubhagya.pdf}},
+  note = {\url{https://sanskritdocuments.org/doc_upanishhat/saubhagya.pdf}; Zugriff: 06.02.2023}, 
+  keywords={onlinesource},%
+}
+
+https://sanskritdocuments.org/doc_upanishhat/saubhagya.pdf
+
 @online{muktabodha,
   title = {Muktabodha},
   organization = {Muktabodha Indological Research Institute (MIRI)}, 
@@ -1312,6 +1366,16 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
   note = {\url{https://www.muktabodha.org/}; Zugriff: 07.07.2022}, 
   keywords={onlinesource},
 }
+
+@online{mandalabrah,
+  title = {Maṇḍalabrāhaṇopaniṣat},
+  organization = {Muktabodha Indological Research Institute (MIRI)},
+  editor={Śāstri, Mahādeva}, 
+  howpublished = {\url{https://www.muktabodha.org/}},
+  note = {\url{https://muktalib7.com/DL_CATALOG_ROOT/DL_CATALOG/TEXTS/ETEXTS/mandalabraahmanopanisaDEV.pdf}; Zugriff: 10.03.2022}, 
+  keywords={onlinesource},
+}
+
 
 @online{muktalib,
   title = {Muktabodha Digital Library},
