more collation with annotated translation until Bāhyalakṣya-chapter

--- a/bindu.bib
+++ b/bindu.bib
@@ -37,6 +37,16 @@
   keywords={printsource},
 }
 
+@book{sivasvarodaya,
+  title={Śivasvarodaya},
+  subtitle={Śivasvarodaya: A Critical Edition - English Version},
+  editor={Maheshananda, Swami},
+  year={2015},
+  publisher={Kaivalyadhama S.M.Y.M. Samiti},
+  address={Lonavla},
+  keywords={printsource},
+}
+
 @book{bäumer2013,
   title={Vijñānabhairava},
   subtitle={Vijñāna Bhairava - Das göttliche Bewußtsein},
@@ -99,6 +109,16 @@ vārttikamarīcibhiḥ sahitaḥ},
   year={1988},
   address={Leiden; New York},
   publisher={Brill},
+  keywords={printsource},
+}
+
+@book{kumbhaka, 
+  title={Kumbhakapaddhati},
+  subtitle={Kumbhaka-Paddhati of Raghuvīra: Science of Prāṇāyāma}, 
+  editor={Gharote, M.L. and Devnath, Parimal},
+  year={2021},
+  address={Lonavla},
+  publisher={The Lonavla Yoga Institute (India)},
   keywords={printsource},
 }
 
@@ -197,6 +217,16 @@ vārttikamarīcibhiḥ sahitaḥ},
   keywords={seclit},
 }
 
+
+@book{smith1998,
+  title={Reflections on Resemblance, Ritual, and Religion},
+  author={Smith, Brian K.},
+  year={1998},
+  publisher={Motilal Banarsidass},
+  address={Delhi},
+  keywords={seclit},
+}
+
 @article{sinha1976,
   title={Problem of Time and Temporality in Sāṃkhya-Yoga and Ābhidharma Buddhism},
   author={Sinha, Braj Mohan Pd.},
@@ -215,8 +245,29 @@ vārttikamarīcibhiḥ sahitaḥ},
  keywords={seclit},
  }
 
-@article{birch2013,
- title={The Amanaska: King of All Yogas. A Critical Edition
+@book{hanneder2006,
+ title={Studies on the Mokṣopaya}, 
+ author={Hanneder, Jürgen},
+ year={2006},
+ publisher={Deutsche Morgenländische Gesellschaft, Harrasowitz Verlag}, 
+ address={Wiesbaden},
+ keywords={seclit},
+}
+
+@book{manasollasa,
+ title={Mānasollāsa},
+ subtitle={Mānasollāsa of King Someśvara}, 
+ editor={Shrigondekar, G. K.}, 
+ note={Baroda Oriental Institute}, 
+ year={1939},
+ publisher={Bombay Vaibhav Press},
+ address={Mumbai},
+ keywords={printsource}, 
+} 
+
+@book{birch2013,
+title={Amanaska}, 
+subtitle={The Amanaska: King of All Yogas. A Critical Edition
 and Annotated Translation with a Monographic Introduction: Ph.D. Dissertation},
  author={Birch, Jason},
  year={2013},
@@ -332,7 +383,7 @@ Sound},
 }
 
 @book{datta2015,
- title= {Dattātryayogaśāstram},
+ title= {Dattātreyayogaśāstra},
  editor= {Gharote, Manmath M. and Devnath, Parimal},
  year= {2015},
  publisher= {The Lonavla Yoga Institute},
@@ -552,6 +603,14 @@ Sound},
   keywords={seclit},
 }
 
+@book{goodall2016,
+  title={Tantric Studies: Fruits of a Franco-German Project on Early Tantra},
+  author={Goodall, Dominic and Isaacson, Harunaga},
+  year={2016},
+  publisher={Institut Français de Pondichéry / Ecole française d’Extrême-Orient},
+  address={Pondicherry},
+  keywords={seclit},
+}
 
 @book{goodall1998,
   title={Bhaṭṭa Rāmakaṇṇtha's Commentary on the Kiraṇatantra - Vol. I: Chapters 1-6. Critical edition and annotated translation.},
@@ -738,7 +797,8 @@ Sound},
 }
 
 @book{mallinson2007,
-   title={The Shiva Samhita},
+   title={Śivasaṃhitā},
+   subtitle={The Shiva Samhita},
    editor={Mallinson, James},   
    year={2007},
    publisher={Yoga Vidya.com LLC},
@@ -926,6 +986,15 @@ Sound},
   author={Boethling, O. und Roth, R.},
   year={1858},  
   volume={4},
+  address={Petersburg},
+  keywords={seclit},
+}
+
+@book{petersburger5,
+  title={Sanskrit Wörterbuch},
+  author={Boethling, O. und Roth, R.},
+  year={1858},  
+  volume={5},
   address={Petersburg},
   keywords={seclit},
 }
@@ -1194,6 +1263,23 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
    keywords={printsource},
 }
 
+@book{yogaupaniṣaded,
+   title={Yoga Upaniṣads},
+   subtitle={Yoga Upaniṣads with the Commentary of Śrī Upaniṣadbrahmayogin},
+   year={1968},
+   editor={Sastri, Pandit A. Mahadeva},  
+   publisher={The Adyar Library and Research Centre},
+   address={Adyar},
+   keywords={printsource},
+}
+
+@book{nadabindu,
+   title={Nādabindūpaniṣat},
+   note={Cf. Yoga Upaniṣads}, 
+   keywords={printsource},
+}
+
+
 @article{mallinsonnath,
    title={Nāth Sampradāya},
    author={Mallinson, James},
@@ -1264,7 +1350,8 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
 }
 
 @book{liersch2023,
-  title={Das Gorakṣayogaśāstra: Diplomatische und kritische Edition mit annotierter Übersetzung (Forthcoming)},
+  title={Gorakṣayogaśāstra},
+  subtitle={Das Gorakṣayogaśāstra: Diplomatische und kritische Edition mit annotierter Übersetzung (Forthcoming)},
   editor={Liersch, Nils Jacob},
   publisher={Indica et Tibetica Verlang},
   address={Marburg},
