--- a/translation.tex
+++ b/translation.tex
@@ -217,7 +217,7 @@ Now it is said that this is the characteristic of the embodied person who is end
      \begin{tlate}
         Now \textit{caryāyogaḥ}, the Yoga of wandering is explained. Shapeless, unchangeable, permanent [and] unsplitable. Such is the self. It is seen as such by the one whose mind abides in the self without moving. His self is not touched by sin and merit. Just as the leave of the lotus situated in the amidst water doesn't touch the water; likewise the self [is not touched by sin and merit]. Just as the wind wanders according to its own will in space, likewise the mind of one who is absorbed into the universal spirit [wanders according to its own will in space]. This is \textit{caryāyoga}.
       \end{tlate}
-    %%%%%%%%%%%%%%%%%%%%%
+a    %%%%%%%%%%%%%%%%%%%%%
     %%%%%%%%%%%%%%%%%%%
     %%%%%%%%%%%%%%%%%%%
     %%%%%%%%%%%%%%%%%%%
@@ -260,7 +260,10 @@ Now it is said that this is the characteristic of the embodied person who is end
         \centerline{\textrm{\small{[The Division of the Inherent Nature]}}}
           \bigskip
 \begin{tlate}    
-  Now the division of the inherent nature is described.\footnote{This refers to the mention of \textit{svabhāva} in verse 5 of the description of Jñānayoga.} Just as the seed of the banyan tree ripens into the shape of the banyan tree, and by its own inherent nature attains such a tenfold division. [Namely]: "Root, shoot, bark, branch, twig, bud, the unfolding flower, flower, fruit and nectar." The division reaches [those] ten parts. In this way, the pure, unchanging, unblemished, attains such [division] precisely because of the inherent nature of the self. [Namely] the division "Earth, Water, Fire, Wind, Space, Mind, Intellect, Illusion, Transformations and Form". Because of the power of Jñānayoga, there arises the certainty that "The Self is verily one." As some particular soil (\textit{ekaika}) sometimes appears soft, sometimes beautiful, sometimes fragrant, sometimes unscented, sometimes golden, sometimes silver, is sometimes made of precious stone, sometimes appearing white, sometimes black, sometimes copper, sometimes yellow, sometimes mottled, sometimes like various fruit, sometimes like flowers, sometimes like the nectar of immortality, [and that only] because of its inherent nature. In this way, the self also takes the form of a human, a bird, a gazelle, an elephant, a vidyādhara, a gandharva, a centaur, great scholar or a great fool, a sick or healthy, an angry or or peaceful person, by virtue of its inherent nature. Because of Jñānayoga, transformation is recognized as formless, Just as the place of origin of the fruit is only one. But the transformation of the fruit is seen as manifold.
+  Now the division of the inherent nature is described.\footnote{This refers to the mention of \textit{svabhāva} in verse 5 of the description of Jñānayoga.} Just as the seed of the banyan tree ripens into the shape of the banyan tree, and by its own inherent nature attains such a tenfold division. [Namely]: "Root, shoot, bark, branch, twig, bud, the unfolding flower, flower, fruit and nectar." The division reaches [those] ten parts. In this way, the pure, unchanging, unblemished, attains such [division] precisely because of the inherent nature of the self. [Namely] the division "Earth, Water, Fire, Wind, Space, Mind, Intellect, Illusion, Transformations and Form". Because of the power of Jñānayoga, there arises the certainty that "The Self is verily one." As some particular soil (\textit{ekaika}) sometimes appears soft, sometimes beautiful, sometimes fragrant, sometimes unscented, sometimes golden, sometimes silver, is sometimes made of precious stone, sometimes appearing white, sometimes black, sometimes copper, sometimes yellow,
+
+
+  sometimes mottled, sometimes like various fruit, sometimes like flowers, sometimes like the nectar of immortality, [and that only] because of its inherent nature. In this way, the self also takes the form of a human, a bird, a gazelle, an elephant, a vidyādhara, a gandharva, a centaur, great scholar or a great fool, a sick or healthy, an angry or or peaceful person, by virtue of its inherent nature. Because of Jñānayoga, transformation is recognized as formless, Just as the place of origin of the fruit is only one. But the transformation of the fruit is seen as manifold.
   
   One fruit falls onto the ground. It is getting bright. A bee drinks the flower juice of a fruit. The lover [bee] places itself on the flower wreath above the protuberant circular pistil. A bee drinks the juice of a fruit. The lover (bee) places herself on the flower wreath above the upstanding circular pistil. ne fruit throws the nectar over the flower. This is the inherent nature of the matter. In the same way also the one self enjoys the eight pleasures because of its own being.  
 \\ \\
